--- a/configs/ngp.ini
+++ b/configs/ngp.ini
@@ -22,5 +22,5 @@ batch_size: 1
 
 [WANDB]
 use_wandb: 1
-wandb_project: hash_visualization
-wandb_entity: stevenluots
+wandb_project: playground
+wandb_entity: utmist-parsimony
