--- a/configs/ngp.ini
+++ b/configs/ngp.ini
@@ -1,6 +1,6 @@
 [HASH]
 n_levels: 4
-log2_n_features: 12
+log2_n_features: 10
 feature_dim: 2
 base_resolution: 16
 finest_resolution: 256
@@ -25,3 +25,4 @@ batch_size: 1
 use_wandb: 1
 wandb_project: freeman-gbr
 wandb_entity: utmist-parsimony
+name: size_1024_consistent_10_400
