--- a/configs/ngp.ini
+++ b/configs/ngp.ini
@@ -1,26 +1,33 @@
 [HASH]
-n_levels: 4
-log2_n_features: 12
-feature_dim: 2
-base_resolution: 16
+n_levels: 1
+log2_n_features: 18
+feature_dim: 1
+base_resolution: 32
 finest_resolution: 256
 
 [NETWORK]
-dim_in: 2
-dim_out: 3
-hidden_dim: 64
-n_layers: 2
+dim_in: 1
+dim_out: 1
+hidden_dim: 32
+n_layers: 3
 
 [TRAINING]
 lr: 5e-3
 iterations: 2000
 device: cuda:0
-dataset: kodak
+dataset: wave
 coord_mode: 0
 model: ngp
 batch_size: 1
+
+[EXPERIMENT]
+exp_seed: 2
+exp_data_idx: 2
+exp_type: 0
+exp_p1: 20
 
 [WANDB]
 use_wandb: 1
 wandb_project: playground
 wandb_entity: utmist-parsimony
+wandb_group: cp_debunk1
